@@ -22,7 +22,23 @@
     <th>Packager</th>
   </tr>
   
-  <tr>
+  <tr bgcolor="#e8ffe8">
+    <td>
+    </td>
+    
+    <td>
+    <font size="+1"><b>Linux</b></font>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+<tr>
     <td>
       <p align="center">
 	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
@@ -130,7 +146,24 @@
     <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
   </tr>
 
-  
+
+<tr bgcolor="#e8ffe8">
+    <td>
+    </td>
+    
+    <td>
+    <font size="+1"><b>Other</b></font>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+    
   <tr>
     <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
     <td>
@@ -152,7 +185,7 @@
     <td><p align="center"><img src="@IMAGES@windows.png"></p></td>
     <td>MS Windows</td>
     <td>
-      Curr
+    <!--  Curr--> 
     </td>
     <td>
       <b>Go <a href="windows.html">here</a></b>
@@ -218,7 +251,7 @@
     <th>Packager</th>
   </tr>
   
-_  <tr>
+  <tr>
     <td>
       <p align="center">
 	<img src="@IMAGES@redhat-logo.png">
